Title info applied to all pages Javascript (read more) info element applied to all Home and About Me pages need completing Overall colour scheme needs finalizing

--- a/b-a.html
+++ b/b-a.html
@@ -41,9 +41,13 @@
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Naruto</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Moments before Naruto Uzumaki's birth, a huge demon known as the Nine-Tailed Fox attacked Konohagakure, the Hidden Leaf Village, and wreaked havoc. In order to put an end to the demon's rampage, the leader of the village, the Fourth Hokage,<span id="dots1">...</span><span id="expand1"> sacrificed his life and sealed the monstrous beast inside the newborn Naruto.
+      In the present, Naruto is a hyperactive and knuckle-headed ninja growing up within Konohagakure. Shunned because of the demon inside him, Naruto struggles to find his place in the village. His one burning desire to become the Hokage and be acknowledged by the villagers who despite him. However, while his goal leads him to unbreakable bonds with lifelong friends, it also lands him in the crosshairs of many deadly foes.</span></p>
+    <button onclick="myFunctiona()" id="rmBtn1">Read more</button>
     </div>
     </article>
     <article>
@@ -51,9 +55,13 @@
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Seven Deadly Sins</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">In a world similar to the European Middle Ages, the feared yet revered Holy Knights of Britannia use immensely powerful magic to protect the region of Britannia and its kingdoms. However, a small subset of the Knights supposedly<span id="dots2">...</span><span id="expand2"> betrayed their homeland and turned their blades against their comrades in an attempt to overthrow the ruler of Liones. They were defeated by the Holy Knights, but rumors continued to persist that these legendary knights, called the "Seven Deadly Sins," were still alive. Ten years later, the Holy Knights themselves staged a coup d’état, and thus became the new, tyrannical rulers of the Kingdom of Liones.
+      Based on the best-selling manga series of the same name, Nanatsu no Taizai follows the adventures of Elizabeth, the third princess of the Kingdom of Liones, and her search for the Seven Deadly Sins. With their help, she endeavors to not only take back her kingdom from the Holy Knights, but to also seek justice in an unjust world.</span></p>
+    <button onclick="myFunctionb()" id="rmBtn2">Read more</button>
     </div>
     </article>
     <article>
@@ -61,9 +69,14 @@
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">My Hero Academia</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">The appearance of "quirks," newly discovered super powers, has been steadily increasing over the years, with 80 percent of humanity possessing various abilities from manipulation of elements to shapeshifting. This leaves the remainder of the world<span id="dots3">...</span><span id="expand3"> completely powerless, and Izuku Midoriya is one such individual.
+      Since he was a child, the ambitious middle schooler has wanted nothing more than to be a hero. Izuku's unfair fate leaves him admiring heroes and taking notes on them whenever he can. But it seems that his persistence has borne some fruit: Izuku meets the number one hero and his personal idol, All Might. All Might's quirk is a unique ability that can be inherited, and he has chosen Izuku to be his successor!
+      Enduring many months of grueling training, Izuku enrolls in UA High, a prestigious high school famous for its excellent hero training program, and this year's freshmen look especially promising. With his bizarre but talented classmates and the looming threat of a villainous organization, Izuku will soon learn what it really means to be a hero.</span></p>
+    <button onclick="myFunctionc()" id="rmBtn3">Read more</button>
     </div>
     </article>
     <article>
@@ -71,9 +84,13 @@
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Black Clover</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Asta and Yuno were abandoned at the same church on the same day. Raised together as children, they came to know of the "Wizard King"—a title given to the strongest mage in the kingdom—and promised that they would compete against each other for the<span id="dots4">...</span><span id="expand4"> position of the next Wizard King. However, as they grew up, the stark difference between them became evident. While Yuno is able to wield magic with amazing power and control, Asta cannot use magic at all and desperately tries to awaken his powers by training physically.
+      When they reach the age of 15, Yuno is bestowed a spectacular Grimoire with a four-leaf clover, while Asta receives nothing. However, soon after, Yuno is attacked by a person named Lebuty, whose main purpose is to obtain Yuno's Grimoire. Asta tries to fight Lebuty, but he is outmatched. Though without hope and on the brink of defeat, he finds the strength to continue when he hears Yuno's voice. Unleashing his inner emotions in a rage, Asta receives a five-leaf clover Grimoire, a "Black Clover" giving him enough power to defeat Lebuty. A few days later, the two friends head out into the world, both seeking the same goal—to become the Wizard King!</span></p>
+    <button onclick="myFunctiond()" id="rmBtn4">Read more</button>
     </div>
     </article>
     </section>
