--- a/h-s.html
+++ b/h-s.html
@@ -41,9 +41,13 @@
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Chainsaw Man</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Denji is robbed of a normal teenage life, left with nothing but his deadbeat father's overwhelming debt. His only companion is his pet, the chainsaw devil Pochita, with whom he slays devils for money that inevitably ends up in the yakuza's pockets.<span id="dots1">...</span><span id="expand1"> All Denji can do is dream of a good, simple life: one with delicious food and a beautiful girlfriend by his side. But an act of greedy betrayal by the yakuza leads to Denji's brutal, untimely death, crushing all hope of him ever achieving happiness.
+      Remarkably, an old contract allows Pochita to merge with the deceased Denji and bestow devil powers on him, changing him into a hybrid able to transform his body parts into chainsaws. Because Denji's new abilities pose a significant risk to society, the Public Safety Bureau's elite devil hunter Makima takes him in, letting him live as long as he obeys her command. Guided by the promise of a content life alongside an attractive woman, Denji devotes everything and fights with all his might to make his naive dreams a reality.</span></p>
+    <button onclick="myFunctiona()" id="rmBtn1">Read more</button>
     </div>
     </article>
     <article>
@@ -51,9 +55,14 @@
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Tokyo Ghoul</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">A sinister threat is invading Tokyo: flesh-eating "ghouls" who appear identical to humans and blend into their population. Reserved college student Ken Kaneki buries his nose in books and avoids the news of the growing crisis. However, the appearance of an<span id="dots2">...</span><span id="expand2"> attractive woman named Rize Kamishiro shatters his solitude when she forwardly asks him on a date.
+      While walking Rize home, Kaneki discovers she isn't as kind as she first appeared, and she has led him on with sinister intent. After a tragic struggle, he later awakens in a hospital to learn his life was saved by transplanting the now deceased Rize's organs into his own body.
+      Kaneki's body begins to change in horrifying ways, and he transforms into a human-ghoul hybrid. As he embarks on his new dreadful journey, Kaneki clings to his humanity in the evolving bloody conflict between society's new monsters and the government agents who hunt them.</span></p>
+    <button onclick="myFunctionb()" id="rmBtn2">Read more</button>
     </div>
     </article>
     <article>
@@ -61,9 +70,14 @@
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Berserk</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Guts, a man who will one day be known as the Black Swordsman, is a young traveling mercenary characterized by the large greatsword he carries. He accepts jobs that offer the most money, but he never stays with one group for long—until<span id="dots3">...</span><span id="expand3"> he encounters the Band of the Falcon. Ambushed after completing a job, Guts crushes many of its members in combat. Griffith, The Band of the Falcon's leader and founder, takes an interest in Guts and duels him. While the others are no match for Guts, Griffith defeats him in one blow.
+Incapacitated and taken into the Band of the Falcon's camp to recover, Guts wakes up two days later. He confronts Griffith, and the two duel yet again, only this time with a condition: Guts will join the Band of the Falcon if he loses. Due to his fresh injuries, Guts loses the fight and is inducted by Griffith.
+In three years' time, Guts has become one of the Band of the Falcon's commanders. On the battlefield, his combat prowess is second only to Griffith as he takes on large groups of enemies all on his own. With Guts' immense strength and Griffith's leadership, the Band of the Falcon dominate every battle they partake in. But something menacing lurks in the shadows, threatening to change Guts' life forever.</span></p>
+    <button onclick="myFunctionc()" id="rmBtn3">Read more</button>
     </div>
     </article>
     <article>
@@ -71,9 +85,13 @@
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">The Promised Neverland</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Surrounded by a forest and a gated entrance, the Grace Field House is inhabited by orphans happily living together as one big family, looked after by their "Mama," Isabella. Although they are required to take tests daily, the children are free to<span id="dots4">...</span><span id="expand4"> spend their time as they see fit, usually playing outside, as long as they do not venture too far from the orphanage—a rule they are expected to follow no matter what. However, all good times must come to an end, as every few months, a child is adopted and sent to live with their new family, never to be heard from again.
+      However, the three oldest siblings have their suspicions about what is actually happening at the orphanage, and they are about to discover the cruel fate that awaits the children living at Grace Field, including the twisted nature of their beloved Mama.</span></p>
+    <button onclick="myFunctiond()" id="rmBtn4">Read more</button>
     </div>
     </article>
     </section>
