--- a/music.html
+++ b/music.html
@@ -41,9 +41,13 @@
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Your Lie in April</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Kousei Arima is a child prodigy known as the "Human Metronome" for playing the piano with precision and perfection. Guided by a strict mother and rigorous training, Kousei dominates every competition he enters, earning the admiration of<span id="dots1">...</span><span id="expand1"> his musical peers and praise from audiences. When his mother suddenly passes away, the subsequent trauma makes him unable to hear the sound of a piano, and he never takes the stage thereafter.
+      Nowadays, Kousei lives a quiet and unassuming life as a junior high school student alongside his friends Tsubaki Sawabe and Ryouta Watari. While struggling to get over his mother's death, he continues to cling to music. His monochrome life turns upside down the day he encounters the eccentric violinist Kaori Miyazono, who thrusts him back into the spotlight as her accompanist. Through a little lie, these two young musicians grow closer together as Kaori tries to fill Kousei's world with color.</span></p>
+    <button onclick="myFunctiona()" id="rmBtn1">Read more</button>
     </div>
     </article>
     <article>
@@ -51,9 +55,13 @@
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Beck: Mongolian Chop Squad</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Fourteen-year-old Yukio "Koyuki" Tanaka is a dispirited young boy with no goals in life. However, this all changes when Koyuki saves a strange-looking dog named Beck from being harassed by a group of local kids. The dog's owner, 16-year-old Ryuusuke "Ray" Minami<span id="dots2">...</span><span id="expand2">, is an emerging guitarist and the former member of a popular rock band.
+      After Koyuki meets Ray again in a diner, the older boy leads him to his former band's meeting place and dazzles Koyuki with his amazing guitar skills. Slowly becoming interested in the glamour of western rock culture, Koyuki decides to start playing the guitar while helping Ray achieve his dream of leading the ultimate rock band. Together with Ray's younger sister Maho and a few other members, the two boys launch their career into the world of rock by forming a band called BECK. Beck follows the group's struggles and successes as they spread their fame across Japan.</span></p>
+    <button onclick="myFunctionb()" id="rmBtn2">Read more</button>
     </div>
     </article>
     <article>
@@ -61,9 +69,13 @@
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Sound! Euphonium</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Now that Kumiko Oumae has enrolled in Kitauji High School, she hopes to forget about her past. Despite her desire for a fresh start, she gets dragged into the school's band club by her new friends—Sapphire Kawashima and Hazuki Katou—and is once again<span id="dots3">...</span><span id="expand3"> stuck playing the euphonium.
+      As the band currently stands, they won't be able to participate in the local festival, Sunfest, let alone compete at a national level. The band's new advisor, Noboru Taki, gives them a choice: they can relax and have fun, or practice hard and attempt to get into nationals. Not wanting to repeat her mistakes from middle school, Kumiko is doubtful as to whether they should try for nationals. Amidst the chaos, she learns that her old bandmate, Reina Kousaka (who she had a bitter relationship with) has joined Kitauji's band club. Under the pressure of Noboru's strict training, Kumiko and her bandmates must learn to overcome their struggles and find success together.</span></p>
+    <button onclick="myFunctionc()" id="rmBtn3">Read more</button>
     </div>
     </article>
     <article>
@@ -71,9 +83,13 @@
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Bocchi The Rock!</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Yearning to make friends and perform live with a band, lonely and socially anxious Hitori "Bocchi" Gotou devotes her time to playing the guitar. On a fateful day, Bocchi meets the outgoing drummer Nijika Ijichi, who invites her to join Kessoku Band when their<span id="dots4">...</span><span id="expand4"> guitarist, Ikuyo Kita, flees before their first show. Soon after, Bocchi meets her final bandmate—the cool bassist Ryou Yamada.
+      Although their first performance together is subpar, the girls feel empowered by their shared love for music, and they are soon rejoined by Kita. Finding happiness in performing, Bocchi and her bandmates put their hearts into improving as musicians while making the most of their fleeting high school days.</span></p>
+    <button onclick="myFunctiond()" id="rmBtn4">Read more</button>
     </div>
     </section>
   </main>
