--- a/sci-fif.html
+++ b/sci-fif.html
@@ -41,9 +41,14 @@
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Sword Art Online</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Ever since the release of the innovative NerveGear, gamers from all around the globe have been given the opportunity to experience a completely immersive virtual reality. Sword Art Online (SAO), one of the most recent games<span id="dots1">...</span><span id="expand1"> on the console, offers a gateway into the wondrous world of Aincrad, a vivid, medieval landscape where users can do anything within the limits of imagination. With the release of this worldwide sensation, gaming has never felt more lifelike.
+      However, the idyllic fantasy rapidly becomes a brutal nightmare when SAO's creator traps thousands of players inside the game. The "log-out" function has been removed, with the only method of escape involving beating all of Aincrad's one hundred increasingly difficult levels. Adding to the struggle, any in-game death becomes permanent, ending the player's life in the real world.
+      While Kazuto "Kirito" Kirigaya was fortunate enough to be a beta-tester for the game, he quickly finds that despite his advantages, he cannot overcome SAO's challenges alone. Teaming up with Asuna Yuuki and other talented players, Kirito makes an effort to face the seemingly insurmountable trials head-on. But with difficult bosses and threatening dark cults impeding his progress, Kirito finds that such tasks are much easier said than done.</span></p>
+    <button onclick="myFunctiona()" id="rmBtn1">Read more</button>
     </div>
     </article>
     <article>
@@ -51,9 +56,14 @@
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Cyberpunk: Edgerunners</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Dreams are doomed to die in Night City, a futuristic Californian metropolis. As a teenager living in the city's slums, David Martinez is trying to fulfill his mother's lifelong wish for him to reach the top of Arasaka, the world's leading security corporation.<span id="dots2">...</span><span id="expand2"> To this end, he attends the prestigious Arasaka Academy while his mother works tirelessly to keep their family afloat.
+      When an incident with a street gang leaves David's life in tatters, he stumbles upon Sandevistan cyberware—a prosthetic that grants its wearer superhuman speed. Fueled by rage, David implants the device in his back, using it to exact revenge on one of his tormentors. This gets him expelled from the academy, shattering his hopes of ever making his mother proud.
+      After witnessing David's newfound abilities, the beautiful data thief Lucyna "Lucy" Kushinada offers to team up with him, handing him a ticket to salvation. However, associating with Lucy introduces David to the world of Edgerunners—cyborg criminals who will break any law for money. Edgerunners often lose their lives, if the cyberware does not break their minds first; but in his fight for survival inside a corrupt system, David is ready to risk it all.</span></p>
+    <button onclick="myFunctionb()" id="rmBtn2">Read more</button>
     </div>
     </article>
     <article>
@@ -61,9 +71,13 @@
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Edens Zero</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">All his life, Shiki has been surrounded by machines. At Granbell Kingdom, a long-abandoned amusement park, he is the only one of his kind around. That is, until Rebecca Bluegarden and her feline companion Happy arrive<span id="dots3">...</span><span id="expand3">, unaware that they are Granbell's first visitors in one hundred years. Their goal is to make fun videos for their B-Cube channel, but what they find instead is a friend in the socially awkward Shiki.
+      When Granbell becomes too dangerous for the three of them, they set off on an adventure through the Sakura Cosmos. They hope to make more interesting videos and even find the elusive goddess Mother, while Shiki wants to make more friends, spurred on by the words of his late grandfather. Of course, the journey will not be easy, as no one has seen Mother before, but Shiki is determined to reach his goal and explore the boundless reaches of space together with his new friends.</span></p>
+    <button onclick="myFunctionc()" id="rmBtn3">Read more</button>
     </div>
     </article>
     <article>
@@ -71,9 +85,14 @@
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Gintama</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Edo is a city that was home to the vigor and ambition of samurai across the country. However, following feudal Japan's surrender to powerful aliens known as the "Amanto," those aspirations now seem unachievable. With the once-influential shogunate rebuilt<span id="dots4">...</span><span id="expand4"> as a puppet government, a new law is passed that promptly prohibits all swords in public.
+      Enter Gintoki Sakata, an eccentric silver-haired man who always carries around a wooden sword and maintains his stature as a samurai despite the ban. As the founder of Yorozuya, a small business for odd jobs, Gintoki often embarks on endeavors to help other people—though usually in rather strange and unforeseen ways.
+      Assisted by Shinpachi Shimura, a boy with glasses supposedly learning the way of the samurai; Kagura, a tomboyish girl with superhuman strength and an endless appetite; and Sadaharu, their giant pet dog who loves biting on people's heads, the Yorozuya encounter anything from alien royalty to scuffles with local gangs in the ever-changing world of Edo.</span></p>
+    <button onclick="myFunctiond()" id="rmBtn4">Read more</button>
     </div>
     </article>
     </section>
