--- a/drama.html
+++ b/drama.html
@@ -41,9 +41,14 @@
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Assassination Classroom</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Tucked in the mountains near the elite Kunugigaoka Middle School lies a small derelict building that houses the delinquents and dropouts of Class 3-E. Looked down upon by their peers, the students in this class appear to have little hope in<span id="dots1">...</span><span id="expand1"> advancing their academic careers. That is, until the national government tasks them with eliminating the greatest threat to their planet: their new teacher.
+      Having already destroyed the moon, the octopus-like professor—dubbed "Koro-sensei"—has now threatened to destroy the Earth by March of the following year. In light of their mission, the students have found that killing him is easier said than done. Not only can Koro-sensei move at speeds of up to Mach 20, but he can also resist almost every earthly weapon. Ironically, he also proves to be one of the best teachers Class 3-E has ever had. Training the class to excel in both their studies as students and skills as assassins, Koro-sensei is confident that his students' ingenuity and indomitable will could return them to the main campus.
+      Through trial and error, Nagisa Shiota, as well as the other students of Class 3-E, must figure out Koro-sensei's weaknesses—and fast, for the very fate of the world depends upon it.</span></p>
+    <button onclick="myFunctiona()" id="rmBtn1">Read more</button>
     </div>
     </article>
     <article>
@@ -51,9 +56,14 @@
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Classroom of The Elite</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit<span id="dots2">...</span><span id="expand2">, and only the top classes receive favorable treatment.
+      Kiyotaka Ayanokouji is a student of Class D, where the school dumps its worst. There he meets the unsociable Suzune Horikita, who believes she was placed in Class D by mistake and desires to climb all the way to Class A, and the seemingly amicable class idol Kikyou Kushida, whose aim is to make as many friends as possible.
+      While class membership is permanent, class rankings are not; students in lower ranked classes can rise in rankings if they score better than those in the top ones. Additionally, in Class D, there are no bars on what methods can be used to get ahead. In this cutthroat school, can they prevail against the odds and reach the top?</span></p>
+    <button onclick="myFunctionb()" id="rmBtn2">Read more</button>
     </div>
     </article>
     <article>
@@ -61,9 +71,13 @@
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Vinland Saga</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Young Thorfinn grew up listening to the stories of old sailors that had traveled the ocean and reached the place of legend, Vinland. It's said to be warm and fertile, a place where there would be no need for fighting—not at all like<span id="dots3">...</span><span id="expand3"> the frozen village in Iceland where he was born, and certainly not like his current life as a mercenary. War is his home now. Though his father once told him, "You have no enemies, nobody does. There is nobody who it's okay to hurt," as he grew, Thorfinn knew that nothing was further from the truth.
+      The war between England and the Danes grows worse with each passing year. Death has become commonplace, and the viking mercenaries are loving every moment of it. Allying with either side will cause a massive swing in the balance of power, and the vikings are happy to make names for themselves and take any spoils they earn along the way. Among the chaos, Thorfinn must take his revenge and kill Askeladd, the man who murdered his father. The only paradise for the vikings, it seems, is the era of war and death that rages on.</span></p>
+    <button onclick="myFunctionc()" id="rmBtn3">Read more</button>
     </div>
     </article>
     <article>
@@ -71,9 +85,13 @@
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Tokyo Revengers</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Takemichi Hanagaki's second year of middle school was the highest point in his life. He had respect, a gang of friends he could count on, and even a girlfriend. But that was twelve years ago. Today, he's a nobody: a washed-up nonentity made fun of by children and always<span id="dots4">...</span><span id="expand4"> forced to apologize to his younger boss. A sudden news report on the Tokyo Manji Gang's cruel murder of the only girlfriend he ever had alongside her brother only adds insult to injury. Half a second before a train ends his pitiful life for good, Takemichi flashes back to that same day 12 years ago, when he was still dating Hinata Tachibana.
+      After being forced to relive the very same day that began his downward spiral, Takemichi meets Hinata's younger brother. Without thinking, he admits to his seeming death before flashing back to the past. Takemichi urges him to protect his sister before inexplicably returning to the future. Miraculously, he is not dead. Stranger still, the future has changed. It seems as though Takemichi can alter the flow of time. Given the chance to prevent his ex-girlfriend's tragic death at the hands of the Tokyo Manji Gang, Takemichi decides to fly through time to change the course of the future.</span></p>
+    <button onclick="myFunctiond()" id="rmBtn4">Read more</button>
     </div>
     </article>
     </section>
