--- a/f-ma.html
+++ b/f-ma.html
@@ -41,9 +41,13 @@
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Dragon Ball Z</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class=" summary">Five years after winning the World Martial Arts tournament, Goku is now living a peaceful life with his wife and son. This changes, however, with the arrival of a mysterious enemy named Raditz who presents himself as<span id="dots1">...</span><span id="expand1"> Goku's long-lost brother. He reveals that Goku is a descendant of the once powerful but now virtually extinct Saiyan race, whose homeworld was annihilated. When he was sent to Earth as a baby, Goku's sole purpose was to conquer and destroy the planet; but after suffering amnesia from a head injury, his violent and savage nature changed, and instead was raised as a kind and well-mannered boy, now fighting to protect others.
+      With his failed attempt at forcibly recruiting Goku as an ally, Raditz warns Goku's friends of a new threat that's rapidly approaching Earth—one that could plunge Earth into an intergalactic conflict and cause the heavens themselves to shake. A war will soon be fought over the seven mystical Dragon Balls, magic objects that can grant any wish. Only the strongest will survive.</span></p>
+    <button onclick="myFunctiona()" id="rmBtn1">Read more</button>
     </div>
     </article>
     <article>
@@ -51,9 +55,14 @@
     <div id="myInfo2" class="infoHide2">
     <H1 class="sr">Kenichi The Mightiest Disciple</H1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERETEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Whenever he is not getting pummeled in the karate club after school, high schooler Kenichi Shirahama can be found with his head buried in one of the many self-help books he carries with him every day. One day, on the way to school, Kenichi accidentally<span id="dots2">...</span><span id="expand2"> frightens the new student in his class, leading her to throw him down onto the ground. After apologizing for her violent reflexes, she introduces herself as Miu Furinji and asks Kenichi to be her friend.
+      Later that day, after karate club practice, Kenichi is given an ultimatum by one of the other club members: they will fight next week and the loser has to quit the club permanently. While lamenting his imminent defeat in the upcoming fight, Kenichi witnesses Miu fend off three thugs easily. Fed up with being perpetually bullied by those more powerful than him, he asks Miu for tips on how to become a better fighter. She directs Kenichi to her grandfather's dojo, Ryouzanpaku, where several skilled—albeit strange—masters of extreme martial arts have gathered to hone their abilities. Miu promises that Kenichi will become significantly stronger, but only if he manages to stay alive.
+      With those ominous words looming in his mind and the appearance of a criminal martial arts gang known as "Ragnarok" threatening the safety of those around him, Kenichi takes the first step on his journey to become a world-class fighter and a defender of the defenseless.</span></p>
+    <button onclick="myFunctionb()" id="rmBtn2">Read more</button>
     </div>
     </article>
     <article>
@@ -61,9 +70,13 @@
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Kengan Ashura</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Business deals are usually made through meetings and contracts; but in the world of Kengan Ashura, businesses resort to other means to make their decisions: by hiring gladiators. Yabako Sandrovich's Kengan Ashura depicts a world brimming with<span id="dots3">...</span><span id="expand3"> action, violence, and martial arts—one where powerful gladiators have fought in grand arenas since the Edo Period to settle the disputes of wealthy businesses and merchants.
+      Ohma Tokita, who is nicknamed "The Ashura," is a fighter trying to prove himself as the strongest. Hideki Nogi, a member of the Nogi Group, hires Ohma to fight for him and makes Kazuo Yamashita, an average middle-aged man, his manager. The duo is thrown into fights facilitated by the Kengan Association. Their journey will be full of ruthless battles with other fighters aiming for the same goal. Do they have what it takes to be the best?</span></p>
+    <button onclick="myFunctionc()" id="rmBtn3">Read more</button>
     </div>
     </article>
     <article>
@@ -71,9 +84,13 @@
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Baki The Grappler</h1>
     <div></div>
-    <h4>Anime?</h4><p>Yes</p>
+    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
     <br>
-    <h4>Summary:</h4><p>TEXT HERE</p>
+    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <br>
+    <h4>Summary:</h4><p class="summary">Ever since he was born, Baki Hanma has always known nothing but fighting—strengthening every single muscle and learning different techniques from various martial arts under the supervision of his mother, Emi Akezawa. He trains in order to<span id="dots4">...</span><span id="expand4"> prepare himself to face and eventually surpass his own father, Yuujirou Hanma, a man feared by the masses as the "Ogre" and deemed the strongest being in the world.
+      However, when Baki realizes his mother's techniques are no longer enough, he sets out to become stronger in his own way. Seeking out powerful opponents and forming unbreakable bonds with them, he continues to grow both body and his soul, as the clock continues to tick closer toward the inevitable showdown against his father...</span></p>
+    <button onclick="myFunctiond()" id="rmBtn4">Read more</button>
     </div>
     </article>
     </section>
